...
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/modifyNameEditText"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Current name"
            android:inputType="textPersonName"
...
            android:layout_height="wrap_content"
            android:text="Surname:"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/modifySurnameEditText"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Current surname"
            android:inputType="textPersonName"
...
            android:layout_height="wrap_content"
            android:text="Username:"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/modifyUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Current username"
            android:inputType="textPersonName"
...
            android:layout_height="wrap_content"
            android:text="Birthdate:"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/modifyBirthDateEditText"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="01/01/1900"
            android:inputType="date"
...
            android:layout_height="wrap_content"
            android:text="Weight (kg):"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/modifyWeightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/colorPrimaryVariant"
            android:onClick="saveChanges"
...
