...
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/guidelineRH2"
                app:layout_constraintLeft_toRightOf="@id/guidelineRV2"
                app:layout_constraintRight_toLeftOf="@id/guidelineRV3"
                app:layout_constraintTop_toBottomOf="@id/guidelineRH3">
                <TextView
                    android:id="@+id/profileUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="?attr/title_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/statsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:background="@drawable/rounded_button"
...
                    android:id="@+id/guidelineLH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.12" />
                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV"
                    app:layout_constraintRight_toLeftOf="@id/guidelineLV1"
...
                    android:id="@+id/guidelineLH15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6" />
                <TextView
                    android:id="@+id/profileWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/guidelineLV"
                    app:layout_constraintRight_toLeftOf="@id/guidelineLV1"
...
